src/test/ui/type-alias-enum-variants-priority.stderr
error: type vs variant ambiguity
  --> $DIR/type-alias-enum-variants-priority.rs:14:15
   |
LL |     fn f() -> Self::V { loop {} } //~ ERROR type vs variant ambiguity
   |               ^^^^^^^
   |
   = note: #[forbid(type_vs_variant_ambiguity)] on by default

error: aborting due to previous error

